@@ -1,10 +1,10 @@
-#define FILEVER_INCVERSION        0,21,0,306
-#define PRODUCTVER_INCVERSION     0,21,0,306
-#define STRFILEVER_INCVERSION     "0, 21, 0, 306\0"
-#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 306\0"
+#define FILEVER_INCVERSION        0,21,0,308
+#define PRODUCTVER_INCVERSION     0,21,0,308
+#define STRFILEVER_INCVERSION     "0, 21, 0, 308\0"
+#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 308\0"
 
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             21
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  306
+#define TSVN_VERBUILD_INCVERSION  308
 
